--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.scss
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.scss
@@ -107,6 +107,12 @@
     .title-sidenav-content {
       border: 1px solid transparent;
       border-radius: 4px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      /* Centrar horizontalmente */
+      justify-content: center;
+      /* Centrar verticalmente */
     }
 
     .mat-sidenav-content {
