comented unnecesary charts

--- a/src/app/main/bar-chart/bullet/bullet.component.html
+++ b/src/app/main/bar-chart/bullet/bullet.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="column" fxLayoutAlign="center top">
+<!-- <div fxLayout="column" fxLayoutAlign="center top">
   <example-comp comp-name="BAR_CHAR.BULLET_BASIC" comp-desc="BAR_CHAR.BULLET_BASIC.DESC" [files]="getBasicFiles()">
     <o-chart type="bulletChart" chart-height="200" entity="EBullet" [chart-parameters]='chartParameters2'></o-chart>
   </example-comp>
@@ -6,4 +6,4 @@
   <example-comp comp-name="BAR_CHAR.BULLET_CUSTOM" comp-desc="BAR_CHAR.BULLET_CUSTOM.DESC"  comp-note="BAR_CHAR.BULLET_CUSTOM.NOTE" [files]="getCustomFiles()">
     <o-chart #bulletChart type="bulletChart" chart-height="200" [chart-parameters]="chartParameters"></o-chart>
   </example-comp>
-</div>
+</div> -->
