--- a/src/app/main/gauge-chart/gauge-dashboard/gauge-dashboard.component.html
+++ b/src/app/main/gauge-chart/gauge-dashboard/gauge-dashboard.component.html
@@ -1,4 +1,4 @@
-<o-row>
+<!-- <o-row>
   <example-comp comp-name="GAUGE.GAUGE_DASHBOARD_BASIC" fxFlex="50" comp-desc="GAUGE.GAUGE_DASHBOARD_BASIC.DESC"
     [files]="getBasicFiles()">
     <o-chart type="gaugeDashboardChart" chart-height="350" entity="EDataGauge" [chart-parameters]="gaugeDashboardConf2"></o-chart>
@@ -9,4 +9,4 @@
     <o-chart #gaugeDashboard type="gaugeDashboardChart" chart-height="350" [chart-parameters]="gaugeDashboardConf"></o-chart>
   </example-comp>
 
-</o-row>
+</o-row> -->
