--- a/src/app/main/gauge-chart/gauge-simple/gauge-simple.component.html
+++ b/src/app/main/gauge-chart/gauge-simple/gauge-simple.component.html
@@ -1,4 +1,4 @@
-<o-row>
+<!-- <o-row>
   <example-comp fxFlex="50" comp-name="GAUGE.GAUGE_SIMPLE_BASIC" comp-desc="GAUGE.GAUGE_SIMPLE_BASIC.DESC" [files]="getBasicFiles()">
     <o-chart type="gaugeSimpleChart" chart-height="350" entity="EDataGauge" y-axis="value"></o-chart>
   </example-comp>
@@ -7,4 +7,4 @@
     <o-chart #gaugeSimple type="gaugeSimpleChart" chart-height="350" [chart-parameters]="gaugeSimpleConf"></o-chart>
   </example-comp>
 
-</o-row>
+</o-row> -->
