--- a/src/app/main/gauge-chart/gauge-space/gauge-space.component.html
+++ b/src/app/main/gauge-chart/gauge-space/gauge-space.component.html
@@ -1,8 +1,8 @@
-<o-row>
+<!-- <o-row>
   <example-comp fxFlex="50" comp-name="GAUGE.GAUGE_SPACE_BASIC" comp-desc="GAUGE.GAUGE_SPACE_BASIC.DESC" [files]="getBasicFiles()">
     <o-chart type="gaugeSpaceChart" chart-height="350" entity="EDataGauge" [chart-parameters]="gaugeSpaceConf"></o-chart>
   </example-comp>
   <example-comp fxFlex comp-name="GAUGE.GAUGE_SPACE_CUSTOM" comp-desc="GAUGE.GAUGE_SPACE_CUSTOM.DESC" [files]="getCustomFiles()">
     <o-chart #gaugeSpace type="gaugeSpaceChart"  chart-height="350" [chart-parameters]="gaugeSpaceConf2"></o-chart>
   </example-comp>
-</o-row>
+</o-row> -->
