--- a/src/app/main/gauge-chart/radial-percent/radial-percent.component.html
+++ b/src/app/main/gauge-chart/radial-percent/radial-percent.component.html
@@ -1,4 +1,4 @@
-<o-row>
+<!-- <o-row>
   <example-comp fxFlex="50" comp-name="GAUGE.GAUGE_RADIAL_PERCENT_BASIC" comp-desc="GAUGE.GAUGE_RADIAL_PERCENT_BASIC.DESC"
     [files]="getBasicFiles()">
     <o-chart type="radialPercentChart" chart-height="350" y-axis="value" entity="EDataGauge"></o-chart>
@@ -9,4 +9,4 @@
     <o-chart #radialPercent type="radialPercentChart" chart-height="350" [chart-parameters]="radialPercentConf"></o-chart>
   </example-comp>
 
-</o-row>
+</o-row> -->
