--- a/src/app/main/line-chart/ohlc/ohlc.component.html
+++ b/src/app/main/line-chart/ohlc/ohlc.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="column" fxLayoutAlign="center top">
+<!-- <div fxLayout="column" fxLayoutAlign="center top">
   <example-comp comp-name="LINE_CHART.OHLC_BASIC" comp-desc="LINE_CHART.OHLC_BASIC.DESC" [files]="getBasicUsageFiles()">
     <o-chart #ohlc type="ohlcBarChart" chart-height="600" x-data-type="time" [chart-parameters]="chartParameters"
       entity="EStockExchange"></o-chart>
@@ -7,4 +7,4 @@
   <example-comp comp-name="LINE_CHART.OHLC_CUSTOM" comp-desc="LINE_CHART.OHLC_CUSTOM.DESC" [files]="getCustomServiceFiles()">
     <o-chart #ohlc2 type="ohlcBarChart" chart-height="600" x-data-type="time" [chart-parameters]="chartParameters2"></o-chart>
   </example-comp>
-</div>
+</div> -->
