--- a/src/app/main/line-chart/parallel-coordinates/parallel-coordinates.component.html
+++ b/src/app/main/line-chart/parallel-coordinates/parallel-coordinates.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="column" fxLayoutAlign="center top">
+<!-- <div fxLayout="column" fxLayoutAlign="center top">
 
   <example-comp comp-name="LINE_CHART.PARALLEL_COORDINATES_BASIC" comp-desc="LINE_CHART.PARALLEL_COORDINATES_BASIC.DESC" [files]="getBasicFiles()">
     <o-chart type="parallelCoordinatesChart" chart-height="350" entity="EDimensionData" [chart-parameters]="chartConf2"></o-chart>
@@ -7,4 +7,4 @@
   <example-comp comp-name="LINE_CHART.PARALLEL_COORDINATES_CUSTOM" comp-desc="LINE_CHART.PARALLEL_COORDINATES_CUSTOM.DESC" [files]="getCustomFiles()">
     <o-chart #chart type="parallelCoordinatesChart" chart-height="350" [chart-parameters]="chartConf"></o-chart>
   </example-comp>
-</div>
+</div> -->
