--- a/src/app/main/other-charts/candlestick/candlestick.component.html
+++ b/src/app/main/other-charts/candlestick/candlestick.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="column" fxLayoutAlign="center top">
+<!-- <div fxLayout="column" fxLayoutAlign="center top">
   <example-comp comp-name="OTHER_CHARTS.CANDLESTICK_BASIC" comp-desc="OTHER_CHARTS.CANDLESTICK_BASIC.DESC" [files]="getBasicUsageFiles()">
     <o-chart #candlestickbasic  type="candlestickBarChart" chart-height="600" x-data-type="time" [chart-parameters]="chartParameters"
       entity="EStockExchange"></o-chart>
@@ -7,4 +7,4 @@
   <example-comp comp-name="OTHER_CHARTS.CANDLESTICK_CUSTOM" comp-desc="OTHER_CHARTS.CANDLESTICK_BASIC.DESC" [files]="getCustomServiceFiles()">
     <o-chart #candlestickcustom type="candlestickBarChart" chart-height="600" x-data-type="time" [chart-parameters]="chartParameters2"></o-chart>
   </example-comp>
-</div>
+</div> -->
