--- a/src/app/main/area-chart/radar/radar.component.html
+++ b/src/app/main/area-chart/radar/radar.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="column" fxLayoutAlign="center top">
+<!-- <div fxLayout="column" fxLayoutAlign="center top">
 
   <example-comp comp-name="AREA_CHAR.RADAR_BASIC" comp-desc="AREA_CHAR.RADAR_BASIC.DESC" [files]="getBasicFiles()">
     <o-chart type="radarChart" chart-height="400" entity="EDimensionData" [chart-parameters]="chartConf2"></o-chart>
@@ -7,4 +7,4 @@
   <example-comp comp-name="AREA_CHAR.RADAR_BASIC" comp-desc="AREA_CHAR.RADAR_BASIC.DESC" [files]="getCustomFiles()">
     <o-chart #radar type="radarChart" chart-height="400" [chart-parameters]="chartConf"></o-chart>
   </example-comp>
-</div>
+</div> -->
