--- a/src/app/main/bubble-chart/scatter/scatter.component.html
+++ b/src/app/main/bubble-chart/scatter/scatter.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="column" fxLayoutAlign="center top">
+<!-- <div fxLayout="column" fxLayoutAlign="center top">
   <example-comp comp-name="BUBBLE_CHART.SCATTER_BASIC" comp-desc="BUBBLE_CHART.SCATTER_BASIC.DESC" [files]="getBasicUsageFiles()">
     <o-chart type="scatterChart" x-label="Time" y-label="Amount (€)" entity="EMovementsGrouped" x-axis="DATE_" y-axis="MOVEMENT;AVERAGE;BALANCE"
       x-data-type="time" chart-height="600" [chart-parameters]="chartParameters1"></o-chart>
@@ -7,4 +7,4 @@
     <o-chart type="scatterChart" x-label="Time" y-label="Amount (€)" entity="EMovementsGrouped" x-axis="DATE_" y-axis="MOVEMENT;AVERAGE;BALANCE"
       x-data-type="time" [chart-parameters]="chartParameters2" chart-height="600"></o-chart>
   </example-comp>
-</div>
+</div> -->
