--- a/src/app/main/other-charts/pie/pie.component.html
+++ b/src/app/main/other-charts/pie/pie.component.html
@@ -1,13 +1,13 @@
 <div fxLayout="row wrap">
-    <example-comp comp-name="OTHER_CHARTS.PIE_BASIC" comp-desc="OTHER_CHARTS.PIE_BASIC.DESC" [files]="getBasicUsageFiles()"
+    <!-- <example-comp comp-name="OTHER_CHARTS.PIE_BASIC" comp-desc="OTHER_CHARTS.PIE_BASIC.DESC" [files]="getBasicUsageFiles()"
         layout-fill fxFlex="50">
         <o-chart type="pie" entity="EMovementTypesTotal" x-axis="MOVEMENTTYPES" y-axis="MOVEMENT" [chart-parameters]="chartParameters1"></o-chart>
     </example-comp>
 
     <example-comp comp-name="OTHER_CHARTS.PIE_CUSTOM"  [files]="getCustomConfigurationFiles()"
-        layout-fill fxFlex="50"> 
+        layout-fill fxFlex="50">
         <o-chart type="pie" entity="EMovementTypesTotal" x-axis="MOVEMENTTYPES" y-axis="MOVEMENT" [chart-parameters]="chartParameters2"></o-chart>
-    </example-comp>
+    </example-comp> -->
 
     <example-comp comp-name="OTHER_CHARTS.PIE_CUSTOM_SERVICE" comp-desc="OTHER_CHARTS.PIE_CUSTOM_SERVICE.DESC" comp-note="OTHER_CHARTS.PIE_CUSTOM_SERVICE.NOTE" [files]="getCustomDataFiles()"
         layout-fill fxFlex="50">
