--- a/src/app/main/bar-chart/discrete-bar/discrete-bar.component.html
+++ b/src/app/main/bar-chart/discrete-bar/discrete-bar.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="column" fxLayoutAlign="center top">
+<!-- <div fxLayout="column" fxLayoutAlign="center top">
 
   <example-comp comp-name="BAR_CHART.DISCRETE_BASIC" comp-desc="BAR_CHART.DISCRETE_BASIC.DESC" [files]="getBasicUsageFiles()"
     layout-fill>
@@ -29,4 +29,4 @@
     <o-chart #discreteBar type="discreteBar" x-label="Axis x" y-label="Axis Y" [data]="data"></o-chart>
   </example-comp>
 
-</div>
+</div> -->
