--- a/src/app/main/bar-chart/multi-bar/multi-bar.component.html
+++ b/src/app/main/bar-chart/multi-bar/multi-bar.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="column" fxLayoutAlign="center top">
+<!-- <div fxLayout="column" fxLayoutAlign="center top">
     <example-comp comp-name="BAR_CHAR.MULTIBAR_BASIC" comp-desc="BAR_CHAR.MULTIBAR_BASIC.DESC" comp-note="BAR_CHAR.MULTIBAR_BASIC.NOTE"
         [files]="getBasicUsageFiles()" layout-fill>
         <o-chart type="multiBar" x-label="Time" y-label="Amount (€)" entity="EMovementsGrouped" x-axis="DATE_" y-axis="MOVEMENT;AVERAGE;BALANCE"
@@ -9,4 +9,4 @@
         comp-note="BAR_CHAR.MULTIBAR_CUSTOM_SERIES.NOTE" [files]="getCustomDataFiles()" layout-fill>
         <o-chart #multiBar type="multiBar" x-label="Time" y-label="Amount (€)" [data]="data" x-data-type="time" [chart-parameters]="chartParameters2"></o-chart>
     </example-comp>
-</div>
+</div> -->
