--- a/src/app/main/line-chart/line/line.component.html
+++ b/src/app/main/line-chart/line/line.component.html
@@ -1,4 +1,4 @@
-<div fxLayout="column" fxLayoutAlign="center top">
+<!-- <div fxLayout="column" fxLayoutAlign="center top">
   <example-comp comp-name="LINE_CHART.LINE_BASIC" comp-desc="LINE_CHART.LINE_BASIC.DESC" [files]="getBasicUsageFiles()" layout-fill>
     <o-chart type="line" x-label="Time" y-label="Amount (€)" entity="EMovements" x-axis="DATE_" y-axis="MOVEMENT" x-data-type="time"
       [chart-parameters]="chartParameters1" [color]="colorScheme"></o-chart>
@@ -14,4 +14,4 @@
       x-data-type="percentage" [chart-parameters]="chartParametersSerie" [color]="colorScheme"></o-chart>
   </example-comp>
 
-</div>
+</div> -->
