--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -1,20 +1,17 @@
-@import 'node_modules/ontimize-web-ngx-theming/src/themes/ontimize.scss';
+@use 'ontimize-web-ngx/theming/themes/ontimize.scss' as theme;
+@use 'ontimize-web-ngx/theming/ontimize-theme.scss';
+@use 'ontimize-web-ngx/theme.scss' as ontimize-web-ngx-theme;
 
-@import 'node_modules/ontimize-web-ngx-theming/ontimize-theme.scss';
-@include ontimize-theme-styles($theme);
+@include ontimize-theme.ontimize-theme-styles(theme.$theme);
 
-// @import 'node_modules/ontimize-web-ngx-theming/ontimize-theme-lite.scss';
-// @include ontimize-theme-styles-lite($theme);
+// Include ontimize-lite theme
+//@include ontimize-theme-lite.ontimize-theme-styles-lite(theme.$theme, ontimize-theme-lite.$typography);
 
-@import 'node_modules/ontimize-web-ngx/theme.scss';
-@include o-material-theme($theme, $default-typography);
-
-@import '../../app/shared/example/example.theme.scss';
-@include example-component-theme($theme);
+// After define theme, it is necessary to transfer color and typography to Ontimize Web framework
+@include ontimize-web-ngx-theme.o-material-theme(theme.$theme, ontimize-theme.$typography);
 
 .nvd3 text,
 .nvd3 .title,
-.nvtooltip
- {
+.nvtooltip {
   font-family: Roboto !important;
 }
