--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart/o-chart.component.html
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart/o-chart.component.html
@@ -1,28 +1,29 @@
 <div>
   <ng-container [ngSwitch]="type">
 
-    <ngx-charts-pie-chart *ngSwitchCase="'pie'" fxFlexFill class="chart" [view]="[cWidth, cHeight]" [results]="getAdaptData()" [legend]="false"
-      [labels]="true" [explodeSlices]="false" [doughnut]="false" [gradient]="true" [scheme]="color"></ngx-charts-pie-chart>
+    <ngx-charts-pie-chart #pieChart *ngSwitchCase="'pie'" fxFlexFill class="chart" [results]="getAdaptData()" [legend]="false" [labels]="true"
+      [explodeSlices]="false" [doughnut]="false" [scheme]="color" arcWidth="0,5"></ngx-charts-pie-chart>
 
-    <ngx-charts-pie-chart *ngSwitchCase="'donutChart'" fxFlexFill class="chart" [view]="[cWidth, cHeight]" [results]="getAdaptData()" [legend]="false"
-      [labels]="true" [explodeSlices]="false" [doughnut]="true" [gradient]="true" [scheme]="color"></ngx-charts-pie-chart>
+    <ngx-charts-pie-chart #donutChart *ngSwitchCase="'donutChart'" fxFlexFill class="chart" [view]="[cWidth, cHeight]" [results]="getAdaptData()"
+      [legend]="false" [labels]="true" [explodeSlices]="false" [doughnut]="true" [scheme]="color"></ngx-charts-pie-chart>
 
-    <ngx-charts-bar-horizontal *ngSwitchCase="'multiBarHorizontalChart'" [xAxisLabel]="xAxisLabel" [view]="[cWidth, cHeight]"
-      [yAxisLabel]="yAxisLabel" [gradient]="true" [xAxis]="true" [yAxis]="true" [results]="getAdaptData()" [scheme]="color"
-      [xAxisTickFormatting]="xFormatting"></ngx-charts-bar-horizontal>
+    <ngx-charts-bar-horizontal #horizontalBarChart *ngSwitchCase="'multiBarHorizontalChart'" [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel"
+      [xAxis]="true" [yAxis]="true" [results]="getAdaptData()" [scheme]="color" [xAxisTickFormatting]="xFormatting"
+      [yAxisTickFormatting]="yFormatting"></ngx-charts-bar-horizontal>
 
-    <ngx-charts-bar-vertical *ngSwitchCase="'discreteBar'" [xAxisLabel]="xAxisLabel" [view]="[cWidth, cHeight]" [yAxisLabel]="yAxisLabel"
-      [gradient]="true" [xAxis]="true" [yAxis]="true" [results]="getAdaptData()" [scheme]="color" [xAxisTickFormatting]="xFormatting"
-      showDataLabel="true"></ngx-charts-bar-vertical>
+    <ngx-charts-bar-vertical #verticalBarChart *ngSwitchCase="'discreteBar'" [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel" [xAxis]="true"
+      [yAxis]="true" [results]="getAdaptData()" [scheme]="color" [xAxisTickFormatting]="xFormatting" showDataLabel="true"
+      [yAxisTickFormatting]="yFormatting"></ngx-charts-bar-vertical>
 
-    <ngx-charts-line-chart *ngSwitchCase="'line'" [xAxisLabel]="xAxisLabel" [view]="[cWidth, cHeight]" [yAxisLabel]="yAxisLabel" [gradient]="true"
-      [xAxis]="true" [yAxis]="true" [results]="getAdaptData()" [scheme]="color" [xAxisTickFormatting]="xFormatting"></ngx-charts-line-chart>
+    <ngx-charts-line-chart #lineChart *ngSwitchCase="'line'" [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel" [xAxis]="true" [yAxis]="true"
+      [results]="getAdaptData()" [scheme]="color" [xAxisTickFormatting]="xFormatting" [yAxisTickFormatting]="yFormatting"></ngx-charts-line-chart>
 
-    <ngx-charts-area-chart-stacked *ngSwitchCase="'stackedAreaChart'" [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel" [gradient]="true"
-      [xAxis]="true" [yAxis]="true" [results]="getAdaptData()" [scheme]="color" [xAxisTickFormatting]="xFormatting"></ngx-charts-area-chart-stacked>
+    <ngx-charts-area-chart-stacked #stackedAreaChart *ngSwitchCase="'stackedAreaChart'" [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel"
+      [xAxis]="true" [yAxis]="true" [results]="getAdaptData()" [scheme]="color" [xAxisTickFormatting]="xFormatting"
+      [yAxisTickFormatting]="yFormatting"></ngx-charts-area-chart-stacked>
 
-    <ngx-charts-bar-vertical-stacked *ngSwitchCase="'multiBar'" [xAxisLabel]="xAxisLabel" [view]="[cWidth, cHeight]" [yAxisLabel]="yAxisLabel"
-      [gradient]="true" [xAxis]="true" [yAxis]="true" [results]="getAdaptData()" [scheme]="color" [xAxisTickFormatting]="xFormatting">
+    <ngx-charts-bar-vertical-stacked #multiBarChart *ngSwitchCase="'multiBar'" [xAxisLabel]="xAxisLabel" [yAxisLabel]="yAxisLabel" [xAxis]="true"
+      [yAxis]="true" [results]="getAdaptData()" [scheme]="color" [xAxisTickFormatting]="xFormatting" [yAxisTickFormatting]="yFormatting">
     </ngx-charts-bar-vertical-stacked>
 
   </ng-container>
