changes to angular 15

--- a/src/app/main/line-chart/line/line.component.html
+++ b/src/app/main/line-chart/line/line.component.html
@@ -1,17 +1,17 @@
-<!-- <div fxLayout="column" fxLayoutAlign="center top">
+<div fxLayout="column" fxLayoutAlign="center top">
   <example-comp comp-name="LINE_CHART.LINE_BASIC" comp-desc="LINE_CHART.LINE_BASIC.DESC" [files]="getBasicUsageFiles()" layout-fill>
     <o-chart type="line" x-label="Time" y-label="Amount (€)" entity="EMovements" x-axis="DATE_" y-axis="MOVEMENT" x-data-type="time"
-      [chart-parameters]="chartParameters1" [color]="colorScheme"></o-chart>
+      [color]="colorScheme"></o-chart>
   </example-comp>
 
   <example-comp comp-name="LINE_CHART.LINE_CUSTOM" comp-desc="LINE_CHART.LINE_CUSTOM.DESC" [files]="getBasicUsageConfFiles()" layout-fill>
     <o-chart #lineChartBasic type="line" x-label="Time" y-label="Amount (€)" entity="EMovements" x-axis="DATE_" y-axis="MOVEMENT"
-      [chart-parameters]="chartParameters2" x-data-type="time" [color]="colorScheme"></o-chart>
+      x-data-type="time" [color]="colorScheme"></o-chart>
   </example-comp>
 
-  <example-comp comp-name="LINE_CHART.LINE_SERIES" comp-desc="LINE_CHART.LINE_SERIES.DESC" [files]="getCustomDataFiles()" layout-fill>
+  <!-- <example-comp comp-name="LINE_CHART.LINE_SERIES" comp-desc="LINE_CHART.LINE_SERIES.DESC" [files]="getCustomDataFiles()" layout-fill>
     <o-chart #lineChart type="line" x-label="Time" y-label="Amount (€)" entity="EMovementsGrouped" x-axis="DATE_" y-axis="MOVEMENT;AVERAGE;BALANCE"
-      x-data-type="percentage" [chart-parameters]="chartParametersSerie" [color]="colorScheme"></o-chart>
-  </example-comp>
+      x-data-type="percentage"  [color]="colorScheme"></o-chart>
+  </example-comp> -->
 
-</div> -->
+</div>
