--- a/src/app/main/area-chart/stacked-area/stacked-area.component.html
+++ b/src/app/main/area-chart/stacked-area/stacked-area.component.html
@@ -1,3 +1,6 @@
-
-     <o-chart #stackedAreaChart type="stackedAreaChart" x-label="Time" y-label="Amount (€)" entity="EMovementPercent"
-      x-axis="DATE_" y-axis="MOVEMENT;AVERAGE;BALANCE" x-data-type="time" [color]="colorScheme"></o-chart>
+<div fxLayout="column" fxLayoutAlign="center top">
+  <example-comp comp-name="AREA_CHAR.STACKED" comp-desc="AREA_CHAR.STACKED.DESC" [files]="getFiles()" layout-fill>
+    <o-chart #stackedAreaChart type="stackedAreaChart" x-label="Time" y-label="Amount (€)" entity="EMovementPercent" x-axis="DATE_"
+      y-axis="MOVEMENT;AVERAGE;BALANCE" x-data-type="time" [color]="colorScheme"></o-chart>
+  </example-comp>
+</div>
