modified styles and fixed errors

--- a/src/app/main/bar-chart/multi-bar/multi-bar.component.html
+++ b/src/app/main/bar-chart/multi-bar/multi-bar.component.html
@@ -5,8 +5,8 @@
             x-data-type="time" [chart-parameters]="chartParameters1" [color]="colorScheme"></o-chart>
     </example-comp>
 
-    <!-- <example-comp comp-name="BAR_CHAR.MULTIBAR_CUSTOM_SERIES" comp-desc="BAR_CHAR.MULTIBAR_CUSTOM_SERIES.DESC"
+     <example-comp comp-name="BAR_CHAR.MULTIBAR_CUSTOM_SERIES" comp-desc="BAR_CHAR.MULTIBAR_CUSTOM_SERIES.DESC"
         comp-note="BAR_CHAR.MULTIBAR_CUSTOM_SERIES.NOTE" [files]="getCustomDataFiles()" layout-fill>
-        <o-chart #multiBar type="multiBar" x-label="Time" y-label="Amount (€)" [data]="data" x-data-type="time" [chart-parameters]="chartParameters2"></o-chart>
-    </example-comp> -->
+        <o-chart #multiBar type="multiBar" x-label="Time" y-label="Amount (€)" [data]="data2" [color]="colorScheme" x-data-type="time" [chart-parameters]="chartParameters2"></o-chart>
+    </example-comp>
 </div>
