--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,38 +1,65 @@
 <o-column title="INTRODUCTION" class="bg-level-1" fxFlexFill>
+
   <div fxLayout="row">
-    <div layout-padding fxFlex="60">
-      <h3>What is Ontimize Web Charts?</h3>
+    <div fxLayout="column" fxFlex="55" layout-padding>
+      <h2>What is Ontimize Web Charts?</h2>
       <p class="body-text">
         Ontimize Web Charts is a module that allows to you to integrate charts into an Ontimize Web application.
       </p>
       <p class="body-text">
-        Ontimize Web Charts is based on nvD3 and d3 libraries.
+        Ontimize Web Charts is based on d3 libraries.
       </p>
-      <h3>Keep up to date</h3>
+      <h2>Keep up to date</h2>
       <p class="body-text">
         Please refer to our changelog for up-to-date listings of all improvements and breaking changes.
       </p>
       <a href="https://github.com/OntimizeWeb/ontimize-web-ngx-charts/blob/master/CHANGELOG.md" target="_blank">
         <o-button type="STROKED" label="CHANGELOG" layout-padding color="primary" icon="access_time"></o-button>
       </a>
-      <h3>Related topics</h3>
+      <h2>Related topics</h2>
       <p class="body-text">
         Here are some interesting reading topics that can help you better understand how to develop with Ontimize Web.
       </p>
     </div>
-    <div layout-padding fxFlex="40" fxLayoutAlign="center center">
-
+    <div layout-padding fxFlex="45" fxLayoutAlign="center center">
+      <img src="./assets/images/home_light.svg">
     </div>
   </div>
-
   <div fxLayout="row" fxLayoutGap="45px" layout-padding>
     <mat-card fxFlex="33">
-
+      <mat-card-header>Angular documentation</mat-card-header>
+      <mat-card-content>Angular is the new improved version of the ever popular JavaScript framework AngularJS. Angular is a re-imagining of Angular
+        applying all lessons
+        learned from v1.x and promotes a component based architecture while leveraging new features of ES2015 (or TypeScript) like classes and
+        modules.</mat-card-content>
+      <mat-card-footer fxLayoutAlign="center flex-end">
+        <a href="https://angular.io/docs" target="_blank">
+          <o-button type="BASIC" label="Angular documentation link" layout-padding color="primary"></o-button>
+        </a>
+      </mat-card-footer>
     </mat-card>
     <mat-card fxFlex="33">
-
+      <mat-card-header></mat-card-header>
+      <mat-card-content></mat-card-content>
+      <mat-card-footer fxLayoutAlign="center flex-end">
+        <a href="http://leafletjs.com/" target="_blank">
+          <o-button type="BASIC" label="" layout-padding color="primary"></o-button>
+        </a>
+      </mat-card-footer>
     </mat-card>
     <mat-card fxFlex="33">
-
+      <mat-card-header>D3-3.x api reference</mat-card-header>
+      <mat-card-content>D3 (Data-Driven Documents or D3.js) is a JavaScript library for visualizing data using web standards. D3 helps you bring data
+        to life using SVG,
+        Canvas and HTML. D3 combines powerful visualization and interaction techniques with a data-driven approach to DOM manipulation, giving you the
+        full
+        capabilities of modern browsers and the freedom to design the right visual interface for your data.</mat-card-content>
+      <mat-card-footer fxLayoutAlign="center flex-end">
+        <a href="https://github.com/d3/d3-3.x-api-reference/blob/master/API-Reference.md" target="_blank">
+          <o-button type="BASIC" label="D3-3.x api reference" layout-padding color="primary"></o-button>
+        </a>
+      </mat-card-footer>
     </mat-card>
   </div>
+
+</o-column>
