--- a/src/app/main/bar-chart/multi-bar-horizontal/multi-bar-horizontal.component.html
+++ b/src/app/main/bar-chart/multi-bar-horizontal/multi-bar-horizontal.component.html
@@ -1,6 +1,5 @@
 <example-comp comp-name="BAR_CHAR.MULTIBAR_HORIZONTAL" comp-desc="BAR_CHAR.MULTIBAR_HORIZONTAL.DESC" [files]="getBasicUsageFiles()"
     layout-fill>
 
-<o-chart type="multiBarHorizontalChart" x-label="Time" y-label="Amount (€)" entity="EMovementsGrouped" x-axis="DATE_"
-  y-axis="MOVEMENT;AVERAGE;BALANCE" x-data-type="time" ></o-chart>
+<o-chart type="multiBarHorizontalChart" [data]="data" x-label="Time" y-label="Amount (€)" x-data-type="time" [color]="colorScheme"></o-chart>
 </example-comp>
