--- a/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.scss
+++ b/projects/ontimize-web-ngx-charts/src/lib/components/chart-on-demand/o-chart-on-demand.component.scss
@@ -115,6 +115,18 @@
       /* Centrar verticalmente */
     }
 
+    .dark-sidenav-content {
+      background-color: transparent;
+      border: 1px solid transparent;
+      border-radius: 4px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      /* Centrar horizontalmente */
+      justify-content: center;
+      /* Centrar verticalmente */
+    }
+
     .mat-sidenav-content {
       overflow: hidden;
 
